added and styled the action section

--- a/index.html
+++ b/index.html
@@ -18,5 +18,22 @@
         <h1>Welcome to My Portfolio</h1>
         <button class="focus-btn">Stay Focused</button>
     </section>
+    <!-- Action Section -->
+<section class="action-section">
+    <div class="action-container">
+        <!-- Left Content -->
+        <div class="action-left">
+            <h2>Explore it in action</h2>
+            <p>The live preview is here to visualise your brand in bold new look</p>
+            <button class="live-btn">Launch Live Preview</button>
+        </div>
+
+        <!-- Right Image -->
+        <div class="action-right">
+            <img src="Assets/wc-mini.png" alt="Project Preview">
+        </div>
+    </div>
+</section>
+
 </body>
 </html>
