added users section

--- a/index.html
+++ b/index.html
@@ -34,6 +34,27 @@
         </div>
     </div>
 </section>
+<!-- Productive Users Section -->
+<section class="users-section">
+    <div class="users-container">
+    <h2 class="users-title">Thousands of Productive Users</h2>
+    <div class="users-data">
+        <div class="user-box">
+            <h3>10K+</h3>
+            <p>Daily Active Users</p>
+        </div>
+        <div class="user-box">
+            <h3>2M+</h3>
+            <p>Focus Sessions</p>
+        </div>
+        <div class="user-box">
+            <h3>95%</h3>
+            <p>Positive Reviews</p>
+        </div>
+    </div>
+</div>
+</section>
+
 
 </body>
 </html>
