--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <!-- Banner Section -->
     <section class="banner">
-        <h1>Welcome to My Portfolio</h1>
+        <h1>Welcome Aboard for Unlimited UI Template for Webflow Agencies </h1>
         <button class="focus-btn">Stay Focused</button>
     </section>
     <!-- Action Section -->
@@ -54,7 +54,45 @@
     </div>
 </div>
 </section>
+<!-- Get in Touch Section -->
+<section class="contact-section">
+    <div class="contact-container">
+        <!-- Left Side -->
+        <div class="contact-left">
+            <h2>Let’s Get In Touch</h2>
+        </div>
 
+        <!-- Right Side -->
+        <div class="contact-right">
+            <form class="contact-form">
+                <label for="name">Name</label>
+                <input type="text" id="name" placeholder="Enter your name">
 
+                <label for="email">Email</label>
+                <input type="email" id="email" placeholder="Enter your email">
+
+                <label for="message">Message</label>
+                <textarea id="message" placeholder="Write your message"></textarea>
+
+                <button type="submit" class="contact-btn">Tap to Submit</button>
+            </form>
+        </div>
+    </div>
+</section>
 </body>
+<footer>
+    <!-- Footer Section -->
+<footer class="footer">
+    <h2 class="footer-logo">LoGo</h2>
+    <p class="footer-subtitle">Building clean and simple web experiences.</p>
+    <div class="footer-links">
+        <a href="#">Home</a>
+        <a href="#">About</a>
+        <a href="#">How it Works</a>
+        <a href="#">Services</a>
+        <a href="#">Contact</a>
+    </div>
+</footer>
+
+</footer>
 </html>
